# mlops

madewithML/foundations/: CNN.ipynb  Embeddings.ipynb  RNN.ipynb  attention.ipynb  transformers.ipynb
madewithML/testing_ml/: testing.ipynb
mle_python_demo/: README.md  pyproject.toml
mle_python_demo/devops/docker/: Dockerfile
mle_python_demo/pkg_demo/: generate_lag_features.py  linear_regression_ar.py
mle_python_demo/tests/: test_lag_features_fit.py  test_lag_features_init.py
mle_restapi/: README.md  requirements.txt
mle_restapi/app/: contracts.py  inference.py  monitoring.py  train.py
mle_restapi/models/: model.joblib
mle_restapi/tests/: test_inference.py
